full set of recipes working for update a mconf-node installed through the old installation script, now they will be tested to setup a new mconf-node from scratch

--- a/live-notes-server/templates/default/live-notes-server.conf.erb
+++ b/live-notes-server/templates/default/live-notes-server.conf.erb
@@ -10,7 +10,7 @@ respawn
 
 env USER=mconf
 env APP=/usr/local/bin/live-notes-server
-env LOGFILE="<%= node[:mconf][:log][:path] %>/live-notes-server.log"
+env LOGFILE="<%= node[:mconf][:log][:dir] %>/live-notes-server.log"
 env PIDFILE="/var/run/live-notes-server.pid"
 
 script
