--- a/cookbooks/nagios/templates/default/hostgroups.cfg.erb
+++ b/cookbooks/nagios/templates/default/hostgroups.cfg.erb
@@ -20,7 +20,7 @@ define hostgroup {
 define hostgroup {
   hostgroup_name <%= hostgroup %>
   alias <%= hostgroup %>
-<% if @search_nodes[hostgroup].length > 0 -%>
+<% if not @search_nodes[hostgroup].nil? and @search_nodes[hostgroup].length > 0 -%>
   members        <%= @search_nodes[hostgroup] %>
 <% else -%>
   members        empty
