--- a/cookbooks/nagios/templates/default/nagios.cfg.erb
+++ b/cookbooks/nagios/templates/default/nagios.cfg.erb
@@ -827,7 +827,7 @@ enable_event_handlers=1
 # performance data.
 # Values: 1 = process performance data, 0 = do not process performance data
 
-process_performance_data=<%= node['nagios']['process_perf_data'] %>
+process_performance_data=<%= nagios_boolean(node['nagios']['process_perf_data']) %>
 
 
 
