--- a/cookbooks/nagios/templates/default/templates.cfg.erb
+++ b/cookbooks/nagios/templates/default/templates.cfg.erb
@@ -100,16 +100,15 @@ define service {
   name <%= template['id'] %>
   use <% if template['use'].nil? -%>default-service<% else -%><%= template['use'] %><% end -%>
   register 0
-  <% %w{check_interval retry_interval notification_interval }.each do |conf| %>
+  <% %w{check_interval retry_interval notification_interval normal_check_interval retry_check_interval freshness_threshold}.each do |conf| %>
     <% unless template[conf].nil? %>
   <%= conf %> <%= nagios_interval(template[conf]) %>
     <% end %>
   <% end %>
-  <% %w{passive_checks_enabled parallelize_check obsess_over_service check_freshness notifications_enabled event_handler_enabled flap_detection_enabled failure_prediction_enabled process_perf_data retain_status_information retain_nonstatus_information is_volatile check_period max_check_attempts contact_groups notification_options notification_period notes_url action_url}.each do |conf| %>
+  <% %w{passive_checks_enabled parallelize_check obsess_over_service check_freshness notifications_enabled event_handler_enabled flap_detection_enabled failure_prediction_enabled process_perf_data retain_status_information retain_nonstatus_information is_volatile check_period max_check_attempts contact_groups notification_options notification_period notes_url action_url active_checks_enabled stalking_options}.each do |conf| %>
     <% unless template[conf].nil? %>
   <%= conf %> <%= template[conf] %>
     <% end %>
   <% end %>
 }
 <% end -%>
-
