--- a/cookbooks/nagios/templates/default/hostgroups.cfg.erb
+++ b/cookbooks/nagios/templates/default/hostgroups.cfg.erb
@@ -13,18 +13,19 @@ define hostgroup {
   hostgroup_name <%= h %>
   alias <%= h %>
 }
-
 <% end -%>
-
-<% @search_hostgroups.sort.each do |hostgroup| -%>
+<% 
+  @search_hostgroups.sort.each do |hostgroup| 
+    if !@hostgroups.include?(hostgroup)
+-%>
 define hostgroup {
   hostgroup_name <%= hostgroup %>
   alias <%= hostgroup %>
 <% if not @search_nodes[hostgroup].nil? and @search_nodes[hostgroup].length > 0 -%>
   members        <%= @search_nodes[hostgroup] %>
-<% else -%>
-  members        empty
 <% end -%>
 }
-
-<% end -%>
+<%
+    end 
+  end 
+-%>
