--- a/cookbooks/nagios/templates/default/services.cfg.erb
+++ b/cookbooks/nagios/templates/default/services.cfg.erb
@@ -14,10 +14,10 @@ define service {
 # Services defined by data bags
 <% @services.each do |service| -%>
   <%# Do not define a service that has no hostgroup or a hostgroup that doesn't exist (including the "all" hostgroup) %>
-  <% unless service['hostgroup_name'].nil? || !(@hostgroups.include?(service['hostgroup_name']) || service['hostgroup_name'] == "all") -%>
+  <% unless service['hostgroup_name'].nil? || !(@hostgroups & service['hostgroup_name'] == service['hostgroup_name'] || service['hostgroup_name'] == "all") -%>
 define service {
   service_description <%= service['description'] || service['id'] %>
-  hostgroup_name <%= service['hostgroup_name'] %>
+  hostgroup_name <%= service['hostgroup_name'].join(",") %>
   <% if service['use_existing_command'] -%>
   check_command <%= service['use_existing_command'] %>
   <% else -%>
