configuring properly FreeSWITCH to use the external IP when behind NAT, not relying on auto-nat flag - that flag doesn't work always, denying proper access to SIP participants

--- a/cookbooks/bigbluebutton/templates/default/vars.xml.erb
+++ b/cookbooks/bigbluebutton/templates/default/vars.xml.erb
@@ -24,9 +24,8 @@
       affect the sip authentication.  Please review conf/directory/default.xml for more
       information on this topic.
   -->
-  <!-- modified by fcecagno -->
-  <!--X-PRE-PROCESS cmd="set" data="local_ip_v4=127.0.0.1"/-->
-  <!-- end modification -->
+  <!-- fcecagno 2013/04/11 -->
+  <X-PRE-PROCESS cmd="set" data="external_ip_v4=<%= @external_ip %>"/>
 
   <X-PRE-PROCESS cmd="set" data="domain=$${local_ip_v4}"/>
   <X-PRE-PROCESS cmd="set" data="domain_name=$${domain}"/>
