update the freeswitch conference template to remove some other sounds like "you have been kicked from this conference"

--- a/cookbooks/bigbluebutton/templates/default/conference.conf.xml.erb
+++ b/cookbooks/bigbluebutton/templates/default/conference.conf.xml.erb
@@ -58,7 +58,6 @@
       <!--<param name="ack-sound" value="beep.wav"/>-->
       <!-- File to play to acknowledge failure -->
       <!--<param name="nack-sound" value="beeperr.wav"/>-->
-      <% if @enable_freeswitch_sounds -%>
       <!-- File to play to acknowledge muted -->
       <param name="muted-sound" value="conference/conf-muted.wav"/>
       <!-- File to play to acknowledge unmuted -->
@@ -67,11 +66,7 @@
       <param name="alone-sound" value="conference/conf-alone.wav"/>
       <!-- File to play endlessly (nobody will ever be able to talk) -->
       <!--<param name="perpetual-sound" value="perpetual.wav"/>-->
-      <% end -%>
-      <% if @enable_freeswitch_alone_music -%>
-      <!-- File to play when you're alone (music on hold)-->
       <param name="moh-sound" value="$${hold_music}"/>
-      <% end -%>
       <!-- File to play when you join the conference -->
       <param name="enter-sound" value="tone_stream://%(200,0,500,600,700)"/>
       <!-- File to play when you leave the conference -->
@@ -97,7 +92,7 @@
       <!-- Suppress start and stop talking events -->
       <!-- <param name="suppress-events" value="start-talking,stop-talking"/> -->
       <!-- enable comfort noise generation -->
-      <param name="comfort-noise" value="<%= @enable_comfort_noise %>"/>
+      <param name="comfort-noise" value="true"/>
       <!-- Uncomment auto-record to toggle recording every conference call. -->
       <!-- Another valid value is   shout://user:pass@server.com/live.mp3   -->
       <!--
@@ -116,10 +111,6 @@
       <param name="muted-sound" value="conference/conf-muted.wav"/>
       <param name="unmuted-sound" value="conference/conf-unmuted.wav"/>
       <param name="alone-sound" value="conference/conf-alone.wav"/>
-      <% end -%>
-      <% if @enable_freeswitch_alone_music -%>
-      <param name="moh-sound" value="$${hold_music}"/>
-      <% end -%>
       <param name="enter-sound" value="tone_stream://%(200,0,500,600,700)"/>
       <param name="exit-sound" value="tone_stream://%(500,0,300,200,100,50,25)"/>
       <param name="kicked-sound" value="conference/conf-kicked.wav"/>
@@ -128,6 +119,10 @@
       <param name="is-unlocked-sound" value="conference/conf-is-unlocked.wav"/>
       <param name="pin-sound" value="conference/conf-pin.wav"/>
       <param name="bad-pin-sound" value="conference/conf-bad-pin.wav"/>
+      <% end -%>
+      <% if @enable_freeswitch_alone_music -%>
+      <param name="moh-sound" value="$${hold_music}"/>
+      <% end -%>
       <param name="caller-id-name" value="$${outbound_caller_name}"/>
       <param name="caller-id-number" value="$${outbound_caller_id}"/>
       <param name="comfort-noise" value="<%= @enable_comfort_noise %>"/>
@@ -141,14 +136,10 @@
       <param name="interval" value="20"/>
       <param name="energy-level" value="300"/>
       <param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>
-      <% if @enable_freeswitch_sounds -%>
       <param name="muted-sound" value="conference/conf-muted.wav"/>
       <param name="unmuted-sound" value="conference/conf-unmuted.wav"/>
       <param name="alone-sound" value="conference/conf-alone.wav"/>
-      <% end -%>
-      <% if @enable_freeswitch_alone_music -%>
       <param name="moh-sound" value="$${hold_music}"/>
-      <% end -%>
       <param name="enter-sound" value="tone_stream://%(200,0,500,600,700)"/>
       <param name="exit-sound" value="tone_stream://%(500,0,300,200,100,50,25)"/>
       <param name="kicked-sound" value="conference/conf-kicked.wav"/>
@@ -159,7 +150,7 @@
       <param name="bad-pin-sound" value="conference/conf-bad-pin.wav"/>
       <param name="caller-id-name" value="$${outbound_caller_name}"/>
       <param name="caller-id-number" value="$${outbound_caller_id}"/>
-      <param name="comfort-noise" value="<%= @enable_comfort_noise %>"/>
+      <param name="comfort-noise" value="true"/>
       <!--<param name="tts-engine" value="flite"/>-->
       <!--<param name="tts-voice" value="kal16"/>-->
     </profile>
@@ -170,14 +161,10 @@
       <param name="interval" value="10"/>
       <param name="energy-level" value="300"/>
       <param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>
-      <% if @enable_freeswitch_sounds -%>
       <param name="muted-sound" value="conference/conf-muted.wav"/>
       <param name="unmuted-sound" value="conference/conf-unmuted.wav"/>
       <param name="alone-sound" value="conference/conf-alone.wav"/>
-      <% end -%>
-      <% if @enable_freeswitch_alone_music -%>
       <param name="moh-sound" value="$${hold_music}"/>
-      <% end -%>
       <param name="enter-sound" value="tone_stream://%(200,0,500,600,700)"/>
       <param name="exit-sound" value="tone_stream://%(500,0,300,200,100,50,25)"/>
       <param name="kicked-sound" value="conference/conf-kicked.wav"/>
@@ -188,7 +175,7 @@
       <param name="bad-pin-sound" value="conference/conf-bad-pin.wav"/>
       <param name="caller-id-name" value="$${outbound_caller_name}"/>
       <param name="caller-id-number" value="$${outbound_caller_id}"/>
-      <param name="comfort-noise" value="<%= @enable_comfort_noise %>"/>
+      <param name="comfort-noise" value="true"/>
     </profile>
 
     <profile name="sla">
@@ -198,7 +185,7 @@
       <param name="caller-controls" value="none"/>
       <param name="energy-level" value="200"/>
       <param name="moh-sound" value="silence"/>
-      <param name="comfort-noise" value="<%= @enable_comfort_noise %>"/>
+      <param name="comfort-noise" value="true"/>
     </profile>
 
   </profiles>
