added support to metadata on streaming mode; fixed the permissions on /var/bigbluebutton/meetings/

--- a/cookbooks/mconf-live/templates/default/config.xml.erb
+++ b/cookbooks/mconf-live/templates/default/config.xml.erb
@@ -48,6 +48,7 @@
 			autoJoin="false"
 			joinGlobal="true"
 			<% end -%>
+			presenterShareOnly = "<%= @streaming %>"
 			skipCheck="false"
 			showButton="true"
 			enabledEchoCancel="true"
