using fps = 15 on streaming mode

--- a/cookbooks/mconf-live/templates/default/config.xml.erb
+++ b/cookbooks/mconf-live/templates/default/config.xml.erb
@@ -68,7 +68,11 @@
 			viewerWindowMaxed = "false"
 			viewerWindowLocation = "top"
 			camKeyFrameInterval = "30"
+			<% if not @streaming -%>
 			camModeFps = "10"
+			<% else -%>
+			camModeFps = "15"
+			<% end -%>
 			camQualityBandwidth = "0"
 			camQualityPicture = "90"
 			enableH264 = "false"
