--- a/cookbooks/nagios/templates/default/services.cfg.erb
+++ b/cookbooks/nagios/templates/default/services.cfg.erb
@@ -6,7 +6,7 @@
 define service {
     service_description Nagios
     hostgroup_name      <%= node['nagios']['server_role'] %>
-    check_command       check-nagios
+    check_command       check_nagios
     contact_groups      admins
     use                 default-service
 }
@@ -14,7 +14,7 @@ define service {
 # Services defined by data bags
 <% @services.each do |service| -%>
   <%# Do not define a service that has no hostgroup or a hostgroup that doesn't exist (including the "all" hostgroup) %>
-  <% unless service['hostgroup_name'].nil? || !(@hostgroups & service['hostgroup_name'] == service['hostgroup_name'] || service['hostgroup_name'] == "all") -%>
+  <% if not service['hostgroup_name'].nil? and ((@hostgroups & service['hostgroup_name']).sort == service['hostgroup_name'].sort or service['hostgroup_name'] == "all") -%>
 define service {
   service_description <%= service['description'] || service['id'] %>
   hostgroup_name <%= service['hostgroup_name'].join(",") %>
