--- a/cookbooks/bigbluebutton/templates/default/conference.conf.xml.erb
+++ b/cookbooks/bigbluebutton/templates/default/conference.conf.xml.erb
@@ -29,6 +29,13 @@
   <profiles>
     <!--If no profile is specified it will default to "default"-->
     <profile name="default">
+      <!-- Directory to drop CDR's 
+	   'auto' means $PREFIX/logs/conference_cdr/<confernece_uuid>.cdr.xml
+	   a non-absolute path means $PREFIX/logs/<value>/<confernece_uuid>.cdr.xml
+	   absolute path means <value>/<confernece_uuid>.cdr.xml
+      -->
+      <!-- <param name="cdr-log-dir" value="auto"/> -->
+      
       <!-- Domain (for presence) -->
       <param name="domain" value="$${domain}"/>
       <!-- Sample Rate-->
@@ -41,10 +48,12 @@
       <!--Can be | delim of waste|mute|deaf|dist-dtmf waste will always transmit data to each channel
           even during silence.  dist-dtmf propagates dtmfs to all other members, but channel controls
 	  via dtmf will be disabled. -->
-      <param name="member-flags" value="mute"/>
+      <!--<param name="member-flags" value="waste"/>-->
 
       <!-- Name of the caller control group to use for this profile -->
       <!-- <param name="caller-controls" value="some name"/> -->
+      <!-- Name of the caller control group to use for the moderator in this profile -->
+      <!-- <param name="moderator-controls" value="some name"/> -->
       <!-- TTS Engine to use -->
       <!--<param name="tts-engine" value="cepstral"/>-->
       <!-- TTS Voice to use -->
@@ -52,8 +61,9 @@
 
       <!-- If TTS is enabled all audio-file params beginning with -->
       <!-- 'say:' will be considered text to say with TTS -->
-      <!-- Set a default path here so you can use relative paths in the other sound params-->
-      <param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>
+      <!-- Override the default path here, after which you use relative paths in the other sound params -->
+      <!-- Note: The default path is the conference's first caller's sound_prefix -->
+      <!--<param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>-->
       <!-- File to play to acknowledge succees -->
       <!--<param name="ack-sound" value="beep.wav"/>-->
       <!-- File to play to acknowledge failure -->
@@ -66,11 +76,12 @@
       <param name="alone-sound" value="conference/conf-alone.wav"/>
       <!-- File to play endlessly (nobody will ever be able to talk) -->
       <!--<param name="perpetual-sound" value="perpetual.wav"/>-->
+      <!-- File to play when you're alone (music on hold)-->
+<!--
       <param name="moh-sound" value="$${hold_music}"/>
-      <!-- File to play when you join the conference -->
       <param name="enter-sound" value="tone_stream://%(200,0,500,600,700)"/>
-      <!-- File to play when you leave the conference -->
       <param name="exit-sound" value="tone_stream://%(500,0,300,200,100,50,25)"/>
+-->
       <!-- File to play when you ae ejected from the conference -->
       <param name="kicked-sound" value="conference/conf-kicked.wav"/>
       <!-- File to play when the conference is locked -->
@@ -85,6 +96,9 @@
       <param name="bad-pin-sound" value="conference/conf-bad-pin.wav"/>
       <!-- Conference pin -->
       <!--<param name="pin" value="12345"/>-->
+      <!--<param name="moderator-pin" value="54321"/>-->
+      <!-- Max number of times the user can be prompted for PIN -->
+      <!--<param name="pin-retries" value="3"/>-->
       <!-- Default Caller ID Name for outbound calls -->
       <param name="caller-id-name" value="$${outbound_caller_name}"/>
       <!-- Default Caller ID Number for outbound calls -->
@@ -98,21 +112,34 @@
       <!--
       <param name="auto-record" value="$${recordings_dir}/${conference_name}_${strftime(%Y-%m-%d-%H-%M-%S)}.wav"/>
       -->
+
+      <!-- IVR digit machine timeouts -->
+      <!-- How much to wait between DTMF digits to match caller-controls -->
+      <!-- <param name="ivr-dtmf-timeout" value="500"/> -->
+      <!-- How much to wait for the first DTMF, 0 forever -->
+      <!-- <param name="ivr-input-timeout" value="0" /> -->
+      <!-- Delay before a conference is asked to be terminated -->
+      <!-- <param name="endconf-grace-time" value="120" /> -->
+      <!-- Can be | delim of wait-mod|audio-always|video-bridge|video-floor-only
+           wait_mod will wait until the moderator in,
+           audio-always will always mix audio from all members regardless they are talking or not -->
+      <!-- <param name="conference-flags" value="audio-always"/> -->
     </profile>
 
     <profile name="wideband">
       <param name="domain" value="$${domain}"/>
       <param name="rate" value="16000"/>
       <param name="interval" value="20"/>
-      <param name="energy-level" value="50"/>
-      <param name="member-flags" value="waste"/>
-      <param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>
+      <param name="energy-level" value="300"/>
+      <!--<param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>-->
       <% if @enable_freeswitch_sounds -%>
       <param name="muted-sound" value="conference/conf-muted.wav"/>
       <param name="unmuted-sound" value="conference/conf-unmuted.wav"/>
       <param name="alone-sound" value="conference/conf-alone.wav"/>
+<!--
       <param name="enter-sound" value="tone_stream://%(200,0,500,600,700)"/>
       <param name="exit-sound" value="tone_stream://%(500,0,300,200,100,50,25)"/>
+-->
       <param name="kicked-sound" value="conference/conf-kicked.wav"/>
       <param name="locked-sound" value="conference/conf-locked.wav"/>
       <param name="is-locked-sound" value="conference/conf-is-locked.wav"/>
@@ -120,7 +147,7 @@
       <param name="pin-sound" value="conference/conf-pin.wav"/>
       <param name="bad-pin-sound" value="conference/conf-bad-pin.wav"/>
       <% end -%>
-      <% if @enable_freeswitch_alone_music -%>
+      <% if @enable_freeswitch_hold_music -%>
       <param name="moh-sound" value="$${hold_music}"/>
       <% end -%>
       <param name="caller-id-name" value="$${outbound_caller_name}"/>
@@ -135,7 +162,7 @@
       <param name="rate" value="32000"/>
       <param name="interval" value="20"/>
       <param name="energy-level" value="300"/>
-      <param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>
+      <!--<param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>-->
       <param name="muted-sound" value="conference/conf-muted.wav"/>
       <param name="unmuted-sound" value="conference/conf-unmuted.wav"/>
       <param name="alone-sound" value="conference/conf-alone.wav"/>
@@ -160,7 +187,7 @@
       <param name="rate" value="48000"/>
       <param name="interval" value="10"/>
       <param name="energy-level" value="300"/>
-      <param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>
+      <!--<param name="sound-prefix" value="$${sounds_dir}/en/us/callie"/>-->
       <param name="muted-sound" value="conference/conf-muted.wav"/>
       <param name="unmuted-sound" value="conference/conf-unmuted.wav"/>
       <param name="alone-sound" value="conference/conf-alone.wav"/>
