--- a/cookbooks/bigbluebutton/templates/default/presentation.yml.erb
+++ b/cookbooks/bigbluebutton/templates/default/presentation.yml.erb
@@ -1,9 +1,12 @@
+
 publish_dir: /var/bigbluebutton/published/presentation
 video_output_width: <%= @video_output_width %>
 video_output_height: <%= @video_output_height %>
+# Alternate output size to use when deskshare videos are present
+# Set higher so that deskshare output is higher quality, but uses more space.
+deskshare_output_width: 1280
+deskshare_output_height: 720
 # offset applied to audio in the output video file
 # audio_offset = 1200 means that the audio will be delayed by 1200ms
-# recommended value for Sorenson: 800
-# recommended value for h.264: 1200
 audio_offset: <%= @audio_offset %>
 include_deskshare: <%= @include_deskshare %>
